# mikroflow

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
db/: schema.sql
docs/: deployment-ru.md
docs/superpowers/plans/: 2026-07-01-mikrotik-netflow-collector.md
docs/superpowers/specs/: 2026-07-01-mikrotik-netflow-collector-design.md
src/mikroflow/: config.py  db.py  models.py  schema.sql  sinks.py
src/mikroflow/collector/: main.py  parser.py  receiver.py  writer.py
src/mikroflow/worker/: aggregator.py  lease_sync.py  main.py  processor.py  rdns.py  retention.py
tests/integration/: conftest.py  test_aggregator.py  test_collector_e2e.py  test_lease_sync.py  test_processor.py  test_rdns.py  test_retention.py  test_schema.py  test_sink.py
tests/unit/: test_config.py  test_lease_normalize.py  test_parser.py  test_worker_wiring.py  test_writer.py
