[project]
name = "mikroflow"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "pydantic-settings>=2.2",
    "RouterOS-api>=0.18",
    "dnspython>=2.6",
    "APScheduler>=3.10",
]

[project.optional-dependencies]
dev = ["pytest>=8", "testcontainers[postgres]>=4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
